Changes on mobile menu, box no longer changes beetween displays, place lang selector

--- a/_sass/galette/_base.scss
+++ b/_sass/galette/_base.scss
@@ -154,6 +154,7 @@ aside#galette {
     border-radius:5px;
     padding: .3em;
     margin: 0 0 0 auto;
+    position: relative;
 
   ul {
     margin:0;
@@ -163,9 +164,13 @@ aside#galette {
     background: linear_gradient(#77B9FB, #3782CD);
     border-radius:5px;
     box-shadow: inset rgba(#fff, 0.45) 0 1px 0, inset rgba(#000, 0.2) 0 -1px 0;
+    display: flex;
 
     li {
-      padding: 0 1em;
+        flex: 1;
+        border-right:1px solid $galette-dark-orange;
+        border-left:1px solid $galette-light-orange;
+        padding: 0 1em;
 
       &:hover {
         background-color: $galette-dark-orange;
@@ -173,11 +178,13 @@ aside#galette {
     }
 
     li:first-child {
-        border-radius: 5px 5px 0 0;
+                border-left: none;
+                border-radius: 5px 0 0 5px;
     }
 
     li:last-child {
-        border-radius: 0 0 5px 5px;
+                border-right:none;
+                border-radius: 0 5px 5px 0;
     }
 
     a {
@@ -191,6 +198,7 @@ aside#galette {
       text-decoration: none;
 
       strong {
+          display: block;
         font-size: $big-font-size;
         -webkit-font-smoothing:antialiased;
       }
@@ -201,30 +209,7 @@ aside#galette {
 @media screen and (min-width: $galette-large) {
     aside#galette {
         float: right;
-        position: relative;
         right: .5em;
         top: .5em;
-        ul {
-            display: flex;
-            li {
-                flex: 1;
-                border-right:1px solid $galette-dark-orange;
-                border-left:1px solid $galette-light-orange;
-            }
-
-            li:first-child {
-                border-left: none;
-                border-radius: 5px 0 0 5px;
-            }
-
-            li:last-child {
-                border-right:none;
-                border-radius: 0 5px 5px 0;
-            }
-
-            a strong {
-                display: block;
-            }
-        }
     }
 }
