--- a/_sass/galette/_mobilemenu.scss
+++ b/_sass/galette/_mobilemenu.scss
@@ -48,6 +48,7 @@
   transition: left 0.3s ease,
               box-shadow 0.3s ease;
   z-index: 999;
+  font-size: 1.2em;
 }
 
 .main-menu ul {
@@ -56,7 +57,7 @@
      -moz-box-shadow: -8px 0 8px rgba(0,0,0,.5);
           box-shadow: -8px 0 8px rgba(0,0,0,.5);
   min-height: 100%;
-  background: #1a1a1a;
+  background: $text-color; // #1a1a1a;
 }
 
 aside#sidebar .main-menu li a {
@@ -71,15 +72,14 @@ aside#sidebar .main-menu li a {
 
 .main-menu a:hover,
 .main-menu a:focus {
-  background: #333;
-  text-decoration: underline;
+  background: rgba(0, 0, 0, 0.4);
 }
 
 .main-menu .menu-close {
   position: absolute;
-  right: -2.6em;
+  right: -2.1em;
   top: 0;
-  background: #1a1a1a;
+  background: $text-color; //#1a1a1a;
   color: white;
   display: block;
   z-index:1000;
@@ -168,6 +168,7 @@ aside#sidebar .main-menu li a {
         top: auto;
         height: auto;
         display: block;
+        font-size: 1em;
     }
 
     aside#sidebar .main-menu li a {
